crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_expr_regex_match.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS n]
  Filter (($0.name =~ "^Alice.*"))
    Source (AS $0)
