crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_expr_string_ops.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS n]
  Filter (((($0.name STARTS WITH "Al") AND ($0.bio CONTAINS "developer")) AND ($0.email ENDS WITH ".com")))
    Source (AS $0)
