crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_list_pred_all_bare.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [ALL($0 IN $1) AS pred]
  Source (AS $1)
