crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_list_pred_any_return.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [ANY($0 IN [1, 2, 3] WHERE ($0 > 0)) AS pred]
  Source (AS $1)
