crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_node_with_props.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS n]
  Filter ({name: "Alice"})
    Source (:Person AS $0)
